[project]
name = "plmbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Deekshant Yadav", email = "d33kshant@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
