[project]
name = "plmbr"
version = "0.1.0"
description = "create data processing pipelines"
readme = "README.md"
authors = [
    { name = "Deekshant Yadav", email = "d33kshant@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
